# market-scanner

./: .env  .gitignore  AGENTS.md  README.md  pycharm_test.txt  pyproject.toml  requirements.txt  run_scan  run_scan.py  scanner.py  tickers.txt  validate_scans.py
.github/workflows/: canonical-price-refresh.yml  daily-market-scan.yml  run_script.yml  scan.yml
config/: settings.py  thresholds.yaml
config/market_engine/: data10_fundamental_metric_formula_catalog.json
data/: failed_tickers.csv  scans_log.csv  scans_validation.csv
data/features/: AA.csv  AAPL.csv  ABBV.csv  ABNB.csv  ADBE.csv  ADI.csv  ADP.csv  ADSK.csv  AEP.csv  AIG.csv  AKAM.csv  ALB.csv  ALL.csv  AMAT.csv  AMD.csv  AMGN.csv  AMT.csv  AMZN.csv  ANET.csv  APD.csv  APH.csv  APP.csv  ASML.csv  AVB.csv  AVGO.csv  AXP.csv  AZO.csv  BA.csv  BABA.csv  BAC.csv  BHP.csv  BIIB.csv  BKNG.csv  BKR.csv  BLK.csv  BMY.csv  BRK-B.csv  BSX.csv  BX.csv  C.csv  (+254 more)
docs/: project_roles_and_responsibilities.md
manifests/: canonical_price_freshness_latest.json
reports/: market_scan_2026-03-11.md  market_scan_2026-03-13.md  market_scan_2026-03-20.md  market_scan_2026-03-23.md  market_scan_2026-03-24.md  market_scan_2026-03-25.md  market_scan_2026-03-26.md  market_scan_2026-03-27.md  market_scan_2026-03-30.md  market_scan_2026-03-31.md  telegram_message.txt
scripts/: run_full_pipeline.py  run_scan.py
src/: __init__.py  build_watchlist.py  data_fetcher.py  evaluate_watchlist.py  indicators.py  regime.py  reporter.py  scanner  scanner.py  utils.py
tests/: conftest.py  test_operator_visibility.py
(+2852 files in other folders)
